Basic wordcount.py program

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# do not commit .pyc files
+*.pyc
+*.pyo
+*.DS_Store
+
+**/env/
+**/venv/
+**/.idea/copilot
+
+*.vscode
+
+# do not commit the config file with passwords
+*/config/dev.json
+
+# do not commit local install, tmp, logs
+**/tmp/
+**/logs/
+**/build/
+
+# do not commit ipython notebook checkpoints
+**/.ipynb_checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
